<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitDroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_title">Welcome to GitDroid</string>
    <string name="login">Login:</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="welcome_message1">GitDroid </string>
    <string name="welcome_message2">is the new </string>
    <string name="welcome_message3">application    that lets you know all the changes gen erated to reposi tories of your</string>
    <string name="welcome_message4"> githubt</string>
    <string name="welcome_message5"> account,</string>
    <string name="displayUser"> Username:</string>
    <string name="displayPassword"> Password:</string>
    <string name="welcome_message6"> and all from your smartphone</string>
    <string name="remember_password">remember password</string>
    <string name="forgot_passwords">forgot password</string>
    <string name="example_email">example@hotmail.com</string>
    <string name="email">Email:</string>
    <string name="thinking_message">Please, type your email and we send you an email with the link for a new password</string>
    <!-- Buttons -->
    <string name="sign_in_button">Sign in</string>
    <string name="forgot_password"><u><b><i>forgot password</i></b></u></string>
    <string name="title_activity_display_data">Data</string>
    <string name="todo">TODO</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
	<string name="submit">Submit</string>
</resources>
