<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:focusableInTouchMode="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="horizontal"
    android:visibility="visible"
    tools:context=".ForgotPassword" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:focusable="true"
        android:padding="14dp"
        android:scrollbarStyle="insideInset" >

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text="@string/email" />

        <Button
            android:id="@+id/submit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end|bottom|left"
            android:layout_margin="2dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:paddingTop="15dp"
            android:textSize="14dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_alignParentTop="true"
        android:background="@color/cerulean"
        android:gravity="center"
        android:text="@string/forgot_passwords"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:width="180dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout1"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/thinking_message"
        android:src="@drawable/password" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="39dp"
        android:labelFor="@id/thinking_message"
        android:src="@drawable/think"
        android:visibility="visible" />

    <TextView
        android:id="@+id/thinking_message"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:alpha="1"
        android:text="@string/thinking_message"
        android:textSize="10dp" />

</RelativeLayout>